--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@types/jasmine": "^3.6.2",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.10",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "chai": "^4.3.4",
     "eslint": "^7.15.0",
-    "ethers": "^5.0.23",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.2.0",
+    "hardhat": "^2.3.0",
     "jasmine": "^3.6.3",
     "nyc": "^15.1.0"
   },
@@ -29,6 +34,7 @@
   },
   "dependencies": {
     "@flashbots/ethers-provider-bundle": "^0.3.1",
+    "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "ts-node": "^9.1.0",
     "typescript": "^4.1.2"
